mise à jour notebook 2

--- a/notebooks/2-scrapper_livre_depuis_categories.ipynb
+++ b/notebooks/2-scrapper_livre_depuis_categories.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_646/2518384907.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_822/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -46,12 +46,13 @@
     "import csv\n",
     "regex_expression = \"</span> #.* in Kindle Store \" # utile pour regex\n",
     "DRIVER_PATH_chromedriver = str(Path('../chromedriver').resolve())\n",
-    "browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)"
+    "browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n",
+    "browser.get(\"http://www.amazon.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "c554d980",
    "metadata": {},
    "outputs": [],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "2dfe8f16",
    "metadata": {
     "scrolled": true
@@ -255,7 +256,7 @@
        "[5138 rows x 7 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "d4440a8a",
    "metadata": {
     "scrolled": false
@@ -630,7 +631,7 @@
        "Travel                               166   166   161    75    13     0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
