--- a/notebooks/2-scrapper_livre_depuis_categories.ipynb
+++ b/notebooks/2-scrapper_livre_depuis_categories.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_822/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_964/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "c554d980",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2dfe8f16",
    "metadata": {
     "scrolled": true
@@ -256,7 +256,7 @@
        "[5138 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d4440a8a",
    "metadata": {
     "scrolled": false
@@ -631,7 +631,7 @@
        "Travel                               166   166   161    75    13     0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
+   "id": "ab1ee091",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1689403029&rnid=157630011&ref=lp_157630011_nr_n_0'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_categorie['url'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "20d84341",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3A157631011'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "liste_categorie['url'][0].split('&dc')[0].split('%')[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "24988cb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trouver_node_url(url):\n",
+    "    \"\"\"fonction qui retourne un lien simplifié et que l'on peu incrémenté d'une catégorie\"\"\"\n",
+    "    node = url.split('&dc')[0].split('%')[-1]\n",
+    "    lien = 'https://www.amazon.com/s?i=digital-text&rh=n%' + node +'&fs=true&page=1'\n",
+    "    #browser.get(lien)\n",
+    "    return(lien)\n",
+    "\n",
+    "def trouver_node_url_a_incrementer(url):\n",
+    "    \"\"\"fonction qui retourne un url que l'on peu incrémenter simplement il n'y a plus qu'a adjiondre i et l'incrémenter à la fin\"\"\"\n",
+    "    node = url.split('&dc')[0].split('%')[-1]\n",
+    "    lien = 'https://www.amazon.com/s?i=digital-text&rh=n%' + node +'&fs=true&page='\n",
+    "    #browser.get(lien)\n",
+    "    return(lien)\n",
+    "def livre_dans_page(url): #fonction qui détermine s'il y a des livres dans la page\n",
+    "    browser.get(url) #navigue sur une page avec tous les liens de la liste\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    livres = soup.find_all('div' ,{ 'data-asin':True, 'data-component-type' : 's-search-result'} ) # trouve tous les livres de la pages\n",
+    "    if livres!=[]:\n",
+    "        return True\n",
+    "    else : \n",
+    "        return False\n",
+    "    trouver_les_livres_dans_page\n",
+    "def trouver_les_livres_dans_page(url_page_principale):\n",
+    "    browser.get(url_page_principale)\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    livres = soup.find_all('div', { 'data-asin':True, 'data-component-type' : 's-search-result'})\n",
+    "    return(livres)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "02fd204e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"sg-col-20-of-24 s-result-item s-asin sg-col-0-of-12 sg-col-16-of-20 sg-col s-widget-spacing-small sg-col-12-of-16\" data-asin=\"B0888P5SBF\" data-cel-widget=\"search_result_1\" data-component-id=\"6\" data-component-type=\"s-search-result\" data-index=\"2\" data-uuid=\"43a76fc7-ca1b-44a9-bfe0-eaf200055295\"><div class=\"sg-col-inner\"><div cel_widget_id=\"MAIN-SEARCH_RESULTS-2\" class=\"s-widget-container s-spacing-small s-widget-container-height-small celwidget slot=MAIN template=SEARCH_RESULTS widgetId=search-results_1489\" data-cel-widget=\"MAIN-SEARCH_RESULTS-2\" data-csa-c-id=\"b8xyw7-has502-guqtzq-l3mftp\" data-csa-c-item-id=\"amzn1.asin.1.B0888P5SBF\" data-csa-c-pos=\"1489\" data-csa-c-type=\"item\" data-csa-op-log-render=\"\"><div class=\"s-card-container s-overflow-hidden aok-relative puis-include-content-margin puis puis-v6rsvs73r5ieo2jbx36zk3g8bu s-latency-cf-section s-card-border\"><div class=\"a-section\"><div class=\"sg-row\"><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-4-of-20 sg-col-4-of-24 s-list-col-left\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-none aok-relative puis-status-badge-container s-list-status-badge-container\"></div><div class=\"s-product-image-container aok-relative s-text-center s-image-overlay-grey puis-image-overlay-grey s-padding-left-small s-padding-right-small s-flex-expand-height puis puis-v6rsvs73r5ieo2jbx36zk3g8bu\"><div class=\"aok-relative\"><span class=\"rush-component\" data-component-type=\"s-product-image\" data-render-id=\"r136sfu3wb0a6c2gwrspcs1uyfi\" data-version-id=\"v6rsvs73r5ieo2jbx36zk3g8bu\"><a class=\"a-link-normal s-no-outline\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\"><div class=\"a-section aok-relative s-image-fixed-height\"><img alt=\"Advances in Science, Technology &amp; Innovation\" class=\"s-image\" data-image-index=\"1489\" data-image-latency=\"s-product-image\" data-image-load=\"\" data-image-source-density=\"1\" src=\"https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY218_.jpg\" srcset=\"https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY218_.jpg 1x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY327_FMwebp_QL65_.jpg 1.5x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY436_FMwebp_QL65_.jpg 2x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY545_FMwebp_QL65_.jpg 2.5x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY654_FMwebp_QL65_.jpg 3x\"/></div></a></span></div></div></div></div><div class=\"sg-col sg-col-4-of-12 sg-col-8-of-16 sg-col-12-of-20 sg-col-12-of-24 s-list-col-right\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-small a-spacing-top-small\"><div class=\"a-section a-spacing-none puis-padding-right-small s-title-instructions-style\"><h2 class=\"a-size-mini a-spacing-none a-color-base s-line-clamp-2\"><a class=\"a-link-normal s-underline-text s-underline-link-text s-link-style a-text-normal\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\"><span class=\"a-size-medium a-color-base a-text-normal\">Advances in Science, Technology &amp; Innovation</span> </a> </h2><div class=\"a-row a-size-base a-color-secondary\"><div class=\"a-row\"><span class=\"a-size-base\">by </span><span class=\"a-size-base\">Rifaat Abdalla</span><span class=\"a-size-base\">, </span><span class=\"a-size-base\">Marwa Esmail</span><span class=\"a-size-base\">, et al.</span></div></div></div><div class=\"sg-row\"><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-4-of-20 sg-col-4-of-24\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-none a-spacing-top-micro puis-price-instructions-style\"><div class=\"a-row a-size-base a-color-base\"><a class=\"a-size-base a-link-normal s-underline-text s-underline-link-text s-link-style a-text-bold\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\">Kindle Edition</a> </div></div></div></div><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-8-of-20 sg-col-8-of-24\"><div class=\"sg-col-inner\"></div></div></div></div></div></div></div></div></div></div></div></div>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trouver_les_livres_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=94')[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "33c0256c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "livre_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=94')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7a6bdc50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(1,10):\n",
+    "    browser.get(trouver_node_url_a_incrementer(liste_categorie['url'][0])+str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df53cbd2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "45739e9f",
    "metadata": {},
    "outputs": [],
