--- a/notebooks/2-scrapper_livre_depuis_categories.ipynb
+++ b/notebooks/2-scrapper_livre_depuis_categories.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_964/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_646/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "c554d980",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2dfe8f16",
    "metadata": {
     "scrolled": true
@@ -256,7 +256,7 @@
        "[5138 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "ab1ee091",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1689403029&rnid=157630011&ref=lp_157630011_nr_n_0'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "20d84341",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "'3A157631011'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 127,
    "id": "24988cb3",
    "metadata": {},
    "outputs": [],
@@ -705,12 +705,14 @@
     "    return(lien)\n",
     "\n",
     "def trouver_node_url_a_incrementer(url):\n",
-    "    \"\"\"fonction qui retourne un url que l'on peu incrémenter simplement il n'y a plus qu'a adjiondre i et l'incrémenter à la fin\"\"\"\n",
+    "    \"\"\"fonction qui retourne un url que l'on peu incrémenter simplement il n'y a plus qu'a adjoindre i et l'incrémenter à la fin\"\"\"\n",
     "    node = url.split('&dc')[0].split('%')[-1]\n",
     "    lien = 'https://www.amazon.com/s?i=digital-text&rh=n%' + node +'&fs=true&page='\n",
     "    #browser.get(lien)\n",
     "    return(lien)\n",
-    "def livre_dans_page(url): #fonction qui détermine s'il y a des livres dans la page\n",
+    "\n",
+    "def y_a_t_il_des_livres_dans_page(url): #fonction qui détermine s'il y a des livres dans la page\n",
+    "    \"\"\" retourne True s'il y a des livres dans la page et False s'il n'y en a pas\"\"\"\n",
     "    browser.get(url) #navigue sur une page avec tous les liens de la liste\n",
     "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
     "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
@@ -719,41 +721,89 @@
     "        return True\n",
     "    else : \n",
     "        return False\n",
-    "    trouver_les_livres_dans_page\n",
+    "    \n",
+    "    \n",
     "def trouver_les_livres_dans_page(url_page_principale):\n",
+    "    \"\"\"fonction qui retourne une liste de lien web des livres présents dans la page\"\"\"\n",
     "    browser.get(url_page_principale)\n",
     "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
     "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
-    "    livres = soup.find_all('div', { 'data-asin':True, 'data-component-type' : 's-search-result'})\n",
-    "    return(livres)\n",
-    "    "
+    "    livres = soup.find_all('a',class_ = 'a-link-normal s-underline-text s-underline-link-text s-link-style a-text-normal')\n",
+    "    liens_livres=['www.amazon.com'+livre.get('href') for livre in livres]  \n",
+    "    #on utilise liste comprehension pour prendre l'élement href (lien hypertexte) \n",
+    "    # et ajouter www.amazon.com/ pour avoir un url exploitable\n",
+    "    return(liens_livres)\n",
+    "\n",
+    "def rang_livre(url_d_un_livre):\n",
+    "    \"\"\" fonction qui retour le rang des vente d'une livre \"\"\"\n",
+    "    browser.get(url_d_un_livre)\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    if soup.find_all( {'span'  : 'a-list-item'}) is not None : \n",
+    "        rang_livre = soup.find_all( {'span'  : 'a-list-item'})\n",
+    "        if len(str(re.compile(regex_expression).search(str(rang_livre))).split())>5 : \n",
+    "            rang = int(str(re.compile(regex_expression).search(str(rang_livre))).split()[5].replace(\"#\",\"\").replace(\",\",\"\"))\n",
+    "        else : rang = None\n",
+    "    else : rang = None\n",
+    "    return(rang)\n",
+    "\n",
+    "\n",
+    "def titre_livre(url_d_un_livre):\n",
+    "    \"\"\"fonction qui retourne le titre du livre lorsqu'on visite la page du livre \"\"\"\n",
+    "    browser.get(url_d_un_livre)\n",
+    "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
+    "    titre=soup.find('span',class_ = \"a-size-extra-large celwidget\").text.strip()\n",
+    "    return(titre)\n",
+    "\n",
+    "\n",
+    "def lien_livre(url_d_un_livre):\n",
+    "    \"\"\"fonction qui retour le lien du livre  \"\"\"\n",
+    "    return(url_d_un_livre)\n",
+    "    \n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 121,
    "id": "02fd204e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"sg-col-20-of-24 s-result-item s-asin sg-col-0-of-12 sg-col-16-of-20 sg-col s-widget-spacing-small sg-col-12-of-16\" data-asin=\"B0888P5SBF\" data-cel-widget=\"search_result_1\" data-component-id=\"6\" data-component-type=\"s-search-result\" data-index=\"2\" data-uuid=\"43a76fc7-ca1b-44a9-bfe0-eaf200055295\"><div class=\"sg-col-inner\"><div cel_widget_id=\"MAIN-SEARCH_RESULTS-2\" class=\"s-widget-container s-spacing-small s-widget-container-height-small celwidget slot=MAIN template=SEARCH_RESULTS widgetId=search-results_1489\" data-cel-widget=\"MAIN-SEARCH_RESULTS-2\" data-csa-c-id=\"b8xyw7-has502-guqtzq-l3mftp\" data-csa-c-item-id=\"amzn1.asin.1.B0888P5SBF\" data-csa-c-pos=\"1489\" data-csa-c-type=\"item\" data-csa-op-log-render=\"\"><div class=\"s-card-container s-overflow-hidden aok-relative puis-include-content-margin puis puis-v6rsvs73r5ieo2jbx36zk3g8bu s-latency-cf-section s-card-border\"><div class=\"a-section\"><div class=\"sg-row\"><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-4-of-20 sg-col-4-of-24 s-list-col-left\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-none aok-relative puis-status-badge-container s-list-status-badge-container\"></div><div class=\"s-product-image-container aok-relative s-text-center s-image-overlay-grey puis-image-overlay-grey s-padding-left-small s-padding-right-small s-flex-expand-height puis puis-v6rsvs73r5ieo2jbx36zk3g8bu\"><div class=\"aok-relative\"><span class=\"rush-component\" data-component-type=\"s-product-image\" data-render-id=\"r136sfu3wb0a6c2gwrspcs1uyfi\" data-version-id=\"v6rsvs73r5ieo2jbx36zk3g8bu\"><a class=\"a-link-normal s-no-outline\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\"><div class=\"a-section aok-relative s-image-fixed-height\"><img alt=\"Advances in Science, Technology &amp; Innovation\" class=\"s-image\" data-image-index=\"1489\" data-image-latency=\"s-product-image\" data-image-load=\"\" data-image-source-density=\"1\" src=\"https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY218_.jpg\" srcset=\"https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY218_.jpg 1x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY327_FMwebp_QL65_.jpg 1.5x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY436_FMwebp_QL65_.jpg 2x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY545_FMwebp_QL65_.jpg 2.5x, https://m.media-amazon.com/images/I/61Jhi7VmAHL._CLa%7C1516%2C1096%7C61AymG0A0EL.jpg%2C71VHgm2NJcL.jpg%7C0%2C0%2C689%2C1096%2B827%2C0%2C689%2C1096%2B344%2C0%2C827%2C1096__AC_UY654_FMwebp_QL65_.jpg 3x\"/></div></a></span></div></div></div></div><div class=\"sg-col sg-col-4-of-12 sg-col-8-of-16 sg-col-12-of-20 sg-col-12-of-24 s-list-col-right\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-small a-spacing-top-small\"><div class=\"a-section a-spacing-none puis-padding-right-small s-title-instructions-style\"><h2 class=\"a-size-mini a-spacing-none a-color-base s-line-clamp-2\"><a class=\"a-link-normal s-underline-text s-underline-link-text s-link-style a-text-normal\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\"><span class=\"a-size-medium a-color-base a-text-normal\">Advances in Science, Technology &amp; Innovation</span> </a> </h2><div class=\"a-row a-size-base a-color-secondary\"><div class=\"a-row\"><span class=\"a-size-base\">by </span><span class=\"a-size-base\">Rifaat Abdalla</span><span class=\"a-size-base\">, </span><span class=\"a-size-base\">Marwa Esmail</span><span class=\"a-size-base\">, et al.</span></div></div></div><div class=\"sg-row\"><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-4-of-20 sg-col-4-of-24\"><div class=\"sg-col-inner\"><div class=\"a-section a-spacing-none a-spacing-top-micro puis-price-instructions-style\"><div class=\"a-row a-size-base a-color-base\"><a class=\"a-size-base a-link-normal s-underline-text s-underline-link-text s-link-style a-text-bold\" href=\"/Advances-in-Science-Technology-Innovation/dp/B0888P5SBF/ref=sr_1_1489?qid=1695248284&amp;s=digital-text&amp;sr=1-1489\">Kindle Edition</a> </div></div></div></div><div class=\"sg-col sg-col-4-of-12 sg-col-4-of-16 sg-col-8-of-20 sg-col-8-of-24\"><div class=\"sg-col-inner\"></div></div></div></div></div></div></div></div></div></div></div></div>"
+       "['www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696973970&s=digital-text&sr=1-17',\n",
+       " 'www.amazon.com/When-Eero-Met-His-Match-ebook/dp/B09VW3RZ32/ref=sr_1_18?qid=1696973970&s=digital-text&sr=1-18',\n",
+       " 'www.amazon.com/Gropius-Man-Who-Built-Bauhaus-ebook/dp/B07QR12XV3/ref=sr_1_19?qid=1696973970&s=digital-text&sr=1-19',\n",
+       " 'www.amazon.com/Companion-Studies-Blackwell-Companions-Cultural-ebook/dp/B006C2C1QQ/ref=sr_1_20?qid=1696973970&s=digital-text&sr=1-20',\n",
+       " 'www.amazon.com/Brunelleschis-Dome-Story-Cathedral-Florence-ebook/dp/B00351YF4I/ref=sr_1_21?qid=1696973970&s=digital-text&sr=1-21',\n",
+       " 'www.amazon.com/Plagued-Fire-Dreams-Furies-Wright-ebook/dp/B07MLP6MD5/ref=sr_1_22?qid=1696973970&s=digital-text&sr=1-22',\n",
+       " 'www.amazon.com/Manual-Section-Paul-Lewis-ebook/dp/B01HNJ93VW/ref=sr_1_23?qid=1696973970&s=digital-text&sr=1-23',\n",
+       " 'www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_24?qid=1696973970&s=digital-text&sr=1-24',\n",
+       " 'www.amazon.com/Architects-Guide-Small-Firm-Management-ebook/dp/B003TQKJG2/ref=sr_1_25?qid=1696973970&s=digital-text&sr=1-25',\n",
+       " 'www.amazon.com/Place-All-People-Richard-Rogers-ebook/dp/B01LDANYVW/ref=sr_1_26?qid=1696973970&s=digital-text&sr=1-26',\n",
+       " 'www.amazon.com/Certified-Solutions-Architect-Professional-Questions-ebook/dp/B0CGMLP9TP/ref=sr_1_27?qid=1696973970&s=digital-text&sr=1-27',\n",
+       " 'www.amazon.com/Fallingwater-Rising-Kaufmann-Americas-Extraordinary-ebook/dp/B0012SMGM4/ref=sr_1_28?qid=1696973970&s=digital-text&sr=1-28',\n",
+       " 'www.amazon.com/Building-Art-Life-Frank-Gehry-ebook/dp/B00TNDOZCE/ref=sr_1_29?qid=1696973970&s=digital-text&sr=1-29',\n",
+       " 'www.amazon.com/Palladio-Penguin-Architecture-James-Ackerman-ebook/dp/B002RI9M2A/ref=sr_1_30?qid=1696973970&s=digital-text&sr=1-30',\n",
+       " 'www.amazon.com/Mastering-Canon-EOS-Rebel-Camera-ebook/dp/B0BYJVF6J9/ref=sr_1_31?qid=1696973970&s=digital-text&sr=1-31',\n",
+       " 'www.amazon.com/Mickey-Muenning-Dreams-Realizations-Architecture-ebook/dp/B00LAN7MW0/ref=sr_1_32?qid=1696973970&s=digital-text&sr=1-32']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "trouver_les_livres_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=94')[0]"
+    "trouver_les_livres_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "33c0256c",
+   "execution_count": 50,
+   "id": "66475020",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +812,28 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_a_t_il_des_livres_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "33c0256c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +844,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 128,
+   "id": "9222ef4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "561422"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rang_livre(\"https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696973970&s=digital-text&sr=1-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "7a6bdc50",
    "metadata": {},
    "outputs": [],
@@ -784,11 +876,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df53cbd2",
+   "execution_count": 115,
+   "id": "72282055",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Goya: A Portrait of the Artist'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titre_livre(\"https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "928bc7fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17'"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lien_livre(\"https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "d3bfca9d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.get(urlR)\n",
+    "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
+    "soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "4ba25f10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "livres=soup.find('span',class_ = \"a-size-extra-large celwidget\").text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "df53cbd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [105]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtitre_livre\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [84]\u001b[0m, in \u001b[0;36mtitre_livre\u001b[0;34m(url_d_un_livre)\u001b[0m\n\u001b[1;32m     51\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(html_page_listing , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;66;03m# créer la soupe avec le parser\u001b[39;00m\n\u001b[1;32m     52\u001b[0m titre\u001b[38;5;241m=\u001b[39msoup\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m,class_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mproductTitle\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m---> 53\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m(\u001b[43mtitre\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhref\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'get'"
+     ]
+    }
+   ],
+   "source": [
+    "titre_livre(\"https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -968,6 +1139,14 @@
     "    else : \n",
     "        return False"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bde2c27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
