--- a/notebooks/2-scrapper_livre_depuis_categories.ipynb
+++ b/notebooks/2-scrapper_livre_depuis_categories.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "fe34fa59",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_646/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_1131/450537386.py:13: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -52,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "id": "c554d980",
    "metadata": {},
    "outputs": [],
    "source": [
-    "liste_categorie = pd.read_csv(\"liste_categorie.txt\", sep='\\t', index_col= \"Numero\")\n"
+    "liste_categorie = pd.read_csv(\"liste_categorie.txt\", sep='\\t', index_col= \"Numero\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "2dfe8f16",
    "metadata": {
     "scrolled": true
@@ -256,7 +256,7 @@
        "[5138 rows x 7 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "id": "d4440a8a",
    "metadata": {
     "scrolled": false
@@ -631,7 +631,7 @@
        "Travel                               166   166   161    75    13     0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "id": "ab1ee091",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "'https://www.amazon.com/s?bbn=157630011&rh=n%3A133140011%2Cn%3A154606011%2Cn%3A154607011%2Cn%3A157630011%2Cn%3A157631011&dc&qid=1689403029&rnid=157630011&ref=lp_157630011_nr_n_0'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "id": "20d84341",
    "metadata": {},
    "outputs": [
@@ -681,7 +681,7 @@
        "'3A157631011'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 91,
    "id": "24988cb3",
    "metadata": {},
    "outputs": [],
@@ -729,7 +729,7 @@
     "    html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
     "    soup = BeautifulSoup(html_page_listing , 'lxml') # créer la soupe avec le parser\n",
     "    livres = soup.find_all('a',class_ = 'a-link-normal s-underline-text s-underline-link-text s-link-style a-text-normal')\n",
-    "    liens_livres=['www.amazon.com'+livre.get('href') for livre in livres]  \n",
+    "    liens_livres=['https://www.amazon.com'+livre.get('href') for livre in livres]  \n",
     "    #on utilise liste comprehension pour prendre l'élement href (lien hypertexte) \n",
     "    # et ajouter www.amazon.com/ pour avoir un url exploitable\n",
     "    return(liens_livres)\n",
@@ -766,32 +766,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 92,
    "id": "02fd204e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696973970&s=digital-text&sr=1-17',\n",
-       " 'www.amazon.com/When-Eero-Met-His-Match-ebook/dp/B09VW3RZ32/ref=sr_1_18?qid=1696973970&s=digital-text&sr=1-18',\n",
-       " 'www.amazon.com/Gropius-Man-Who-Built-Bauhaus-ebook/dp/B07QR12XV3/ref=sr_1_19?qid=1696973970&s=digital-text&sr=1-19',\n",
-       " 'www.amazon.com/Companion-Studies-Blackwell-Companions-Cultural-ebook/dp/B006C2C1QQ/ref=sr_1_20?qid=1696973970&s=digital-text&sr=1-20',\n",
-       " 'www.amazon.com/Brunelleschis-Dome-Story-Cathedral-Florence-ebook/dp/B00351YF4I/ref=sr_1_21?qid=1696973970&s=digital-text&sr=1-21',\n",
-       " 'www.amazon.com/Plagued-Fire-Dreams-Furies-Wright-ebook/dp/B07MLP6MD5/ref=sr_1_22?qid=1696973970&s=digital-text&sr=1-22',\n",
-       " 'www.amazon.com/Manual-Section-Paul-Lewis-ebook/dp/B01HNJ93VW/ref=sr_1_23?qid=1696973970&s=digital-text&sr=1-23',\n",
-       " 'www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_24?qid=1696973970&s=digital-text&sr=1-24',\n",
-       " 'www.amazon.com/Architects-Guide-Small-Firm-Management-ebook/dp/B003TQKJG2/ref=sr_1_25?qid=1696973970&s=digital-text&sr=1-25',\n",
-       " 'www.amazon.com/Place-All-People-Richard-Rogers-ebook/dp/B01LDANYVW/ref=sr_1_26?qid=1696973970&s=digital-text&sr=1-26',\n",
-       " 'www.amazon.com/Certified-Solutions-Architect-Professional-Questions-ebook/dp/B0CGMLP9TP/ref=sr_1_27?qid=1696973970&s=digital-text&sr=1-27',\n",
-       " 'www.amazon.com/Fallingwater-Rising-Kaufmann-Americas-Extraordinary-ebook/dp/B0012SMGM4/ref=sr_1_28?qid=1696973970&s=digital-text&sr=1-28',\n",
-       " 'www.amazon.com/Building-Art-Life-Frank-Gehry-ebook/dp/B00TNDOZCE/ref=sr_1_29?qid=1696973970&s=digital-text&sr=1-29',\n",
-       " 'www.amazon.com/Palladio-Penguin-Architecture-James-Ackerman-ebook/dp/B002RI9M2A/ref=sr_1_30?qid=1696973970&s=digital-text&sr=1-30',\n",
-       " 'www.amazon.com/Mastering-Canon-EOS-Rebel-Camera-ebook/dp/B0BYJVF6J9/ref=sr_1_31?qid=1696973970&s=digital-text&sr=1-31',\n",
-       " 'www.amazon.com/Mickey-Muenning-Dreams-Realizations-Architecture-ebook/dp/B00LAN7MW0/ref=sr_1_32?qid=1696973970&s=digital-text&sr=1-32']"
+       "['https://www.amazon.com/Renzo-Piano-Lorenzo-Ciccarelli-ebook/dp/B0BXM414HP/ref=sr_1_17?qid=1698097999&s=digital-text&sr=1-17',\n",
+       " 'https://www.amazon.com/Brunelleschis-Dome-Story-Cathedral-Florence-ebook/dp/B00351YF4I/ref=sr_1_18?qid=1698097999&s=digital-text&sr=1-18',\n",
+       " 'https://www.amazon.com/Exhibiting-Cultures-Poetics-Politics-Display-ebook/dp/B006Q2GJLU/ref=sr_1_19?qid=1698097999&s=digital-text&sr=1-19',\n",
+       " 'https://www.amazon.com/Companion-Studies-Blackwell-Companions-Cultural-ebook/dp/B006C2C1QQ/ref=sr_1_20?qid=1698097999&s=digital-text&sr=1-20',\n",
+       " 'https://www.amazon.com/Brave-Lovely-Woman-Borthwick-Wright-ebook/dp/B0BW5XNHWW/ref=sr_1_21?qid=1698097999&s=digital-text&sr=1-21',\n",
+       " 'https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_22?qid=1698097999&s=digital-text&sr=1-22',\n",
+       " 'https://www.amazon.com/Certified-Solutions-Architect-Professional-Questions-ebook/dp/B0CGMLP9TP/ref=sr_1_23?qid=1698097999&s=digital-text&sr=1-23',\n",
+       " 'https://www.amazon.com/If-Walls-Could-Speak-Architecture-ebook/dp/B09WC5KY3P/ref=sr_1_24?qid=1698097999&s=digital-text&sr=1-24',\n",
+       " 'https://www.amazon.com/Man-Glass-House-Johnson-Architect-ebook/dp/B07DTC5N92/ref=sr_1_25?qid=1698097999&s=digital-text&sr=1-25',\n",
+       " 'https://www.amazon.com/Super-Potato-Design-Complete-Sugimoto-ebook/dp/B007Y5OZP0/ref=sr_1_26?qid=1698097999&s=digital-text&sr=1-26',\n",
+       " 'https://www.amazon.com/Frank-Lloyd-Wright-Penguin-Lives-ebook/dp/B00188V7R8/ref=sr_1_27?qid=1698097999&s=digital-text&sr=1-27',\n",
+       " 'https://www.amazon.com/Brunelleschi-Studies-Technology-Inventions-Architecture-ebook/dp/B00A73AHWG/ref=sr_1_28?qid=1698097999&s=digital-text&sr=1-28',\n",
+       " 'https://www.amazon.com/Mastering-Canon-EOS-Rebel-Camera-ebook/dp/B0BYJVF6J9/ref=sr_1_29?qid=1698097999&s=digital-text&sr=1-29',\n",
+       " 'https://www.amazon.com/Architects-Death-Family-Engineered-Camps-ebook/dp/B075D8P9HN/ref=sr_1_30?qid=1698097999&s=digital-text&sr=1-30',\n",
+       " 'https://www.amazon.com/Dise%C3%B1o-zen-Feng-Arquitectura-Spanish-ebook/dp/B0C9P68LJ6/ref=sr_1_31?qid=1698097999&s=digital-text&sr=1-31',\n",
+       " 'https://www.amazon.com/Gropius-Man-Who-Built-Bauhaus-ebook/dp/B07QR12XV3/ref=sr_1_32?qid=1698097999&s=digital-text&sr=1-32']"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "id": "66475020",
    "metadata": {},
    "outputs": [
@@ -812,7 +812,7 @@
        "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "id": "33c0256c",
    "metadata": {},
    "outputs": [
@@ -833,28 +833,28 @@
        "False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "livre_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=94')"
+    "y_a_t_il_des_livres_dans_page('https://www.amazon.com/s?i=digital-text&rh=n%3A157631011&fs=true&page=94')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 93,
    "id": "9222ef4f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "561422"
+       "963086"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +865,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
+   "id": "31e36d4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.amazon.com/Exchange-After-Firm-Book-ebook/dp/B0BYHPHG1L/ref=sr_1_2?qid=1698098065&s=digital-text&sr=1-2'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 1\n",
+    "liste_categorie.iloc[i].tolist()#permet de convertir un élément du dataframe en liste\n",
+    "j=1\n",
+    "page_livres_multi=trouver_node_url_a_incrementer(liste_categorie.iloc[i].tolist()[i]) + str(j)\n",
+    "k=1\n",
+    "trouver_les_livres_dans_page(page_livres_multi)[k]\n",
+    "page_livre = trouver_les_livres_dans_page(page_livres_multi)[k]\n",
+    "page_livre\n",
+    "\n",
+    "titre_livre(page_livre)\n",
+    "rang_livre(page_livre)\n",
+    "lien_livre(page_livre)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "7dc5f7b8",
+   "metadata": {},
+   "source": [
+    "Point d'arrêt du 23/10/2023\n",
+    "reste à finaliser la concaténation\n",
+    "puis la fonction stop si il n'y a plus de livre dans une page principale\n",
+    "puis à mettre le tout dans des boucles\n",
+    "puis à mettre des stops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "2dae6f0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.amazon.com/Exchange-After-Firm-Book-ebook/dp/B0BYHPHG1L/ref=sr_1_2?qid=1698098065&s=digital-text&sr=1-2'"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lien_livre(page_livre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "23c951cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rang_livre('https://www.amazon.com/Exchange-After-Firm-Book-ebook/dp/B0BYHPHG1L/ref=sr_1_2?qid=1698097821&s=digital-text&sr=1-2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "7a6bdc50",
    "metadata": {},
    "outputs": [],
@@ -876,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "id": "72282055",
    "metadata": {},
    "outputs": [
@@ -886,7 +973,7 @@
        "'Goya: A Portrait of the Artist'"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,9 +984,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "id": "928bc7fc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -907,7 +996,7 @@
        "'https://www.amazon.com/Goya-Portrait-Artist-Janis-Tomlinson-ebook/dp/B08652LH8P/ref=sr_1_17?qid=1696972790&s=digital-text&sr=1-17'"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,10 +1007,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "id": "d3bfca9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'urlR' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [28]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m browser\u001b[38;5;241m.\u001b[39mget(\u001b[43murlR\u001b[49m)\n\u001b[1;32m      2\u001b[0m html_page_listing \u001b[38;5;241m=\u001b[39m browser\u001b[38;5;241m.\u001b[39mpage_source \u001b[38;5;66;03m# permet de prendre le code html de la page \u001b[39;00m\n\u001b[1;32m      3\u001b[0m soup \u001b[38;5;241m=\u001b[39m BeautifulSoup(html_page_listing , \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlxml\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'urlR' is not defined"
+     ]
+    }
+   ],
    "source": [
     "browser.get(urlR)\n",
     "html_page_listing = browser.page_source # permet de prendre le code html de la page \n",
@@ -930,10 +1031,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "id": "4ba25f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'soup' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m livres\u001b[38;5;241m=\u001b[39m\u001b[43msoup\u001b[49m\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspan\u001b[39m\u001b[38;5;124m'\u001b[39m,class_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ma-size-extra-large celwidget\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'soup' is not defined"
+     ]
+    }
+   ],
    "source": [
     "livres=soup.find('span',class_ = \"a-size-extra-large celwidget\").text.strip()"
    ]
