--- a/notebooks/2-scrapper_livre_depuis_categories.ipynb
+++ b/notebooks/2-scrapper_livre_depuis_categories.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "fe34fa59",
    "metadata": {
     "scrolled": false
@@ -52,19 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "76219038",
    "metadata": {},
    "outputs": [],
    "source": [
     "configuration = { \"wagon\":\"/usr/bin/chromedriver/chromedriver\" , \n",
-    "                 \"raspberry\":\" \" ,\n",
+    "                 \"raspberry\":\"/usr/bin/chromedriver \" ,\n",
     "                \"anaconda-PS-stock\":\"\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "af05317d",
    "metadata": {
     "scrolled": false
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "e000c0ed",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "2d036531",
    "metadata": {},
    "outputs": [
@@ -102,7 +102,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_654/3500987803.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_698/3500987803.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "4de51d0e",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_14336/1485986637.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/tmp/ipykernel_698/1485986637.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  browser = webdriver.Chrome(executable_path=DRIVER_PATH_chromedriver)\n"
      ]
     }
